--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "betterScripts": {
     "start-dev": {
-      "command": "webpack-dev-server --config webpack/webpack.config.js --history-api-fallback --inline --hot --progress --port 3000 --no-info",
+      "command": "webpack-dev-server --config webpack/webpack.config.js --inline --hot --progress --port 3000",
       "env": {
         "NODE_ENV": "development"
       }
@@ -108,7 +108,7 @@
     "react-addons-perf": "^15.3.2",
     "react-addons-test-utils": "^15.4.0",
     "react-grid-layout": "^0.13.9",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^3.1.2",
     "sinon": "^1.17.6",
@@ -125,6 +125,7 @@
     "a10-schemas": "https://github.com/armaniExchange/a10-schemas.git",
     "a10-widget": "git+https://github.com/armaniExchange/a10-widget.git",
     "a10-widget-lib": "git+https://github.com/armaniExchange/a10-widget-lib.git",
+    "babel-plugin-react-transform": "^2.0.2",
     "compression": "^1.6.2",
     "concurrent": "^0.3.2",
     "d3": "^4.4.0",
@@ -145,7 +146,7 @@
     "pretty-error": "^2.0.0",
     "pubsub-js": "^1.5.4",
     "rc-slider": "^5.4.3",
-    "react": "^15.3.2",
+    "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-addons-shallow-compare": "^15.3.2",
     "react-addons-transition-group": "^15.3.2",
